--- a/src/components/PinLegend.module.css
+++ b/src/components/PinLegend.module.css
@@ -4,7 +4,7 @@
   position: absolute;
   top: 4.5rem;
   left: 1rem;
-  z-index: 10;
+  z-index: 1000;
 }
 
 /* Legend panel - always visible */
